fix: Exclude future input files from SCM

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /target
+
+# "Don't share your inputs
+# https://old.reddit.com/r/adventofcode/comments/r7xsn9/retrieving_input_data_files_outside_of_a_browser/hn499vn/
+/inputs
