--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-itertools = "=0.12.0"
-rayon = "1.8.0"
+itertools = "=0.13.0"
+rayon = "=1.10.0"
